fix bug - PC chart overlap

--- a/css/plan_combination.css
+++ b/css/plan_combination.css
@@ -2,10 +2,20 @@
     min-width: 100px;
 }
 
+#PlanCombination_chart {
+	height: 300px;
+	width: auto;
+	margin: 0 -10px 1rem -10px;
+}
+
 @media (max-width: 576px) {
     .plan_combination_card {
         padding: 0;
     }
+	
+	#PlanCombination_chart {
+		height: 320px;
+	}
 }
 
 .consumption-table {
